--- a/src/content/docs/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/guides/upgrade-to/v2.mdx
@@ -4,7 +4,7 @@ description: A guide in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-This guide will walk you through the steps to manually migrate from Hyas v1 to Hyas v2.
+This guide will walk you through the steps to manually update from Hyas v1 to Hyas v2.
 
 ## Upgrading
 
