Update Getting Started guide

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -7,7 +7,7 @@ import Button from '~/components/Button.astro'
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-[Hyas](https://gethyas.com/) is a web framework designed for speed, security, and SEO — all powered by Hugo and npm. Guides, resources, and references to help you build with Hyas.
+[Hyas](https://gethyas.com/) is a web framework designed for speed, security, and SEO — all powered by Hugo and npm. Here you'll find guides, resources, and references to help you build with Hyas.
 
 ## Quick Start
 
