Update guides Start Here section

--- a/src/content/docs/install/auto.mdx
+++ b/src/content/docs/install/auto.mdx
@@ -13,9 +13,9 @@ Read our [step-by-step manual installation guide](/install/manual/) instead.
 
 ## Prerequisites
 
-- __Node.js__ - `v20.11.0` or higher.
-- __Hugo extended__ - `v0.125.0` or higher. 
-- __Text editor__ - We recommend [VS Code](https://code.visualstudio.com/) with the [Hugo Language and Syntax Support](https://marketplace.visualstudio.com/items?itemName=budparr.language-hugo-vscode) extension.
+- __Node.js__ - `v20.11.0` or higher — run `node -v` to check.
+- __Hugo extended__ - `v0.125.0` or higher — run `hugo version` to check.
+- __Text editor__ - We recommend [VS Code](https://code.visualstudio.com/) — see also [Editor Setup](/editor-setup/).
 - __Terminal__ - Hyas is accessed through its command-line interface (CLI).
 
 ## Installation
