--- a/src/content/docs/install/manual.mdx
+++ b/src/content/docs/install/manual.mdx
@@ -13,9 +13,9 @@ Follow the [create hyas CLI wizard](/install/auto/) instead.
 
 ## Prerequisites
 
-- __Node.js__ - `v20.11.0` or higher — run `node -v` to check
-- __Hugo extended__ - `v0.125.0` or higher — run `hugo version` to check
-- __Text editor__ - We recommend [VS Code](https://code.visualstudio.com/) with the [Hugo Language and Syntax Support](https://marketplace.visualstudio.com/items?itemName=budparr.language-hugo-vscode) extension.
+- __Node.js__ - `v20.11.0` or higher — run `node -v` to check.
+- __Hugo extended__ - `v0.125.0` or higher — run `hugo version` to check.
+- __Text editor__ - We recommend [VS Code](https://code.visualstudio.com/) — see also [Editor Setup](/editor-setup/).
 - __Terminal__ - Hyas is accessed through its command-line interface (CLI).
 
 ## Installation
@@ -52,7 +52,7 @@ yarn init --yes
 
 ### 2. Install Hyas, Prettier and Vite
 
-First, install the Hyas project dependency in your project.
+First, install the Hyas project dependencies inside your project.
 
 :::note[Important]
 Hyas must be installed locally, not globally. Make sure you are *not* running `npm install -g gethyas`, `pnpm add -g gethyas`, or `yarn add global gethyas`.
