--- a/src/content/docs/upgrade-hyas.mdx
+++ b/src/content/docs/upgrade-hyas.mdx
@@ -39,7 +39,7 @@ yarn add gethyas@latest @hyas/images@latest @hyas/seo@latest
 
 ### Install a specific version number
 
-To install a specific version of Hyas or integrations, use the appropriate command for your package manager.
+To install a specific [version of Hyas](https://www.npmjs.com/package/gethyas?activeTab=versions) or integrations, use the appropriate command for your package manager.
 
 <Tabs>
   <TabItem label="npm">
@@ -132,3 +132,13 @@ Major releases include changes such as:
 - Changes of existing options in the integration hooks.
 
 A major release may also include some non-breaking changes and improvements that would normally be released separately in a minor or patch release.
+
+## Node.js support
+
+- Hyas supports the [latest Maintenance LTS version](https://nodejs.org/en/about/previous-releases#release-schedule) of Node.js.
+- Hyas supports the [current Active LTS version](https://nodejs.org/en/about/previous-releases#release-schedule) of Node.js.
+- Hyas can support odd versions of Node.js.
+
+## Hugo support
+
+- Hyas supports the [latest Hugo extended version](https://github.com/gohugoio/hugo/releases).
