--- a/src/content/docs/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/guides/upgrade-to/v2.mdx
@@ -4,7 +4,14 @@ description: A guide in my new Starlight docs site.
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-This guide will walk you through the steps to manually update from Hyas v1 to Hyas v2.
+This guide will help you migrate from Hyas v1 to Hyas v2.
+
+## Prerequisites
+
+- __Node.js__ - `v20.11.0` or higher — run `node -v` to check.
+- __Hugo extended__ - `v0.125.0` or higher — run `hugo version` to check.
+- __Text editor__ - We recommend [VS Code](https://code.visualstudio.com/) — see also [Editor Setup](/editor-setup/).
+- __Terminal__ - Hyas is accessed through its command-line interface (CLI).
 
 ## Upgrading
 
@@ -57,21 +64,9 @@ Replace the contents of your project's `package.json` with the following:
 }
 ```
 
-### 3. Install Hyas, Prettier, and Vite
+### 3. Install Hyas
 
-First, add an `.npmrc` file to your project root with the following:
-
-```ini
-// .npmrc
-enable-pre-post-scripts = true
-auto-install-peers = true
-node-linker = hoisted
-prefer-symlinked-executables = false
-```
-
-#### Install Hyas
-
-Next, install the latest version of Hyas:
+Install the latest Hyas project dependencies inside your project:
 
 <Tabs>
   <TabItem label="npm">
@@ -91,9 +86,9 @@ yarn add gethyas@latest
   </TabItem>
 </Tabs>
 
-#### Install Prettier and Vite
+### 4. Install Prettier and Vite
 
-Then, install the latest version of Prettier and Vite — as `devDependencies`:
+Install the latest version of Prettier and Vite — as `devDependencies`:
 
 <Tabs>
   <TabItem label="npm">
@@ -113,7 +108,7 @@ yarn add -D prettier@latest vite@latest
   </TabItem>
 </Tabs>
 
-### 4. Install integrations
+### 5. Install integrations
 
 Optionally, install the the recommended integrations in your project:
 
@@ -143,12 +138,13 @@ But, if you notice errors or unexpected behavior, please check below for what ha
 
 ## Configuration
 
-Update your configuration files for the recommended integrations:
+Check your project's configuration for Hyas and the recommended integrations:
 
+- [Create configuration files](/install/manual/#6-create-configuration-files)
 - [Images](https://images.gethyas.com/docs/start-here/manual-setup/)
 - [SEO](https://seo.gethyas.com/docs/start-here/manual-setup/)
 
-## Know Issues
+## Known Issues
 
 ### ENOENT
 
