Update guides Start Here section

--- a/src/content/docs/editor-setup.mdx
+++ b/src/content/docs/editor-setup.mdx
@@ -37,7 +37,7 @@ In addition to local editors, Hyas also runs well on in-browser hosted editors, 
 
 [Prettier](https://prettier.io/) is a popular formatter for JavaScript, HTML, CSS, and more. Hyas includes Prettier and a `format` command that runs `prettier **/** -w -c`. You can customize the Hyas defaults for Prettier by updating the `.prettierrc.yaml` and `.prettierignore` files in your project root.
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm run format
