--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -13,7 +13,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 Get a new Hyas project up and running locally with our helpful `create-hyas` CLI wizard!
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm create hyas@latest
