--- a/src/content/docs/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/guides/upgrade-to/v2.mdx
@@ -21,7 +21,7 @@ You can upgrade your project by following the steps below.
 
 Clean dependencies currently installed to avoid conflicts.
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm run clean:install
@@ -68,7 +68,7 @@ Replace the contents of your project's `package.json` with the following:
 
 Install the latest Hyas project dependencies inside your project:
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm install gethyas@latest
@@ -90,7 +90,7 @@ yarn add gethyas@latest
 
 Install the latest version of Prettier and Vite — as `devDependencies`:
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm install -D prettier@latest vite@latest
@@ -112,7 +112,7 @@ yarn add -D prettier@latest vite@latest
 
 Optionally, install the the recommended integrations in your project:
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm install @hyas/images@latest @hyas/seo@latest
@@ -150,7 +150,7 @@ Check your project's configuration for Hyas and the recommended integrations:
 
 When you get an `ENOENT` error message, run the following command:
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm run clean:install && npm install
