--- a/src/content/docs/upgrade-hyas.mdx
+++ b/src/content/docs/upgrade-hyas.mdx
@@ -16,7 +16,7 @@ You can find an exhaustive list of all changes in [Hyas' changelog](https://gith
 
 To update Hyas and integrations to their current versions, use the appropriate command for your package manager.
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 # Example: upgrade Hyas with Images and SEO integrations
@@ -41,7 +41,7 @@ yarn add gethyas@latest @hyas/images@latest @hyas/seo@latest
 
 To install a specific [version of Hyas](https://www.npmjs.com/package/gethyas?activeTab=versions) or integrations, use the appropriate command for your package manager.
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm install gethyas@2.4.1 @hyas/images@3.1.0
