--- a/src/content/docs/install/auto.mdx
+++ b/src/content/docs/install/auto.mdx
@@ -30,7 +30,7 @@ Prefer to try Hyas in your browser? Visit [new.gethyas.com](https://new.gethyas.
 
 Run the following command in your terminal to start our handy install wizard:
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm create hyas@latest
@@ -56,7 +56,7 @@ If all goes well, you should see a "Done" message followed by the next steps.
 
 `cd` into your new project directory and install your projects' dependencies before continuing.
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm install
@@ -80,7 +80,7 @@ Hyas uses the Hugo development server that has everything you need for project d
 
 Use your favorite package manager to run this command and start the Hugo development server.
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 npm run dev
@@ -112,7 +112,7 @@ You can also start a new Hyas project based on an [official example](https://git
 
 Create a new project with an official example — for example with Doks:
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 # Syntax: npm create hyas@latest -- --template <example-name>
@@ -137,7 +137,7 @@ yarn create hyas@latest --template doks
 
 Create a new project based on a GitHub repository's main branch
 
-<Tabs>
+<Tabs syncKey="package-manager">
   <TabItem label="npm">
 ```bash
 # Syntax: npx degit <user/repo> [project-directory]
