--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -51,6 +51,7 @@ Visit [new.gethyas.com](https://new.gethyas.com/) and choose from a variety of t
     - [Main features](/concepts/why-hyas/)
     - [Project structure](/basics/project-structure/)
     - [Configuration](/basics/configuration/)
+    - [Commands](/basics/commands/)
   </Card>
   <Card title="Extend Hyas" icon="puzzle">
     - [Themes](/guides/themes/)
