--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -8,7 +8,7 @@ import FileTree from '~/components/FileTree.astro';
 
 Your new Hyas project generated from the `create hyas` CLI wizard already includes some files and folders. Others, you will create yourself and add to Hyas' existing file structure.
 
-Here's how an Hyas project is organized, and some files you will find in your new project.
+Here's how a Hyas project is organized, and some files you will find in your new project.
 
 ## Directories and Files
 
