Update Layouts guide

--- a/src/content/docs/basics/pages.mdx
+++ b/src/content/docs/basics/pages.mdx
@@ -7,7 +7,7 @@ sidebar:
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-__Pages__ are files that live in the `content` subdirectory of your Hyas project. They are responsible for handling routing, data loading, and overall page layout for every page in your website.
+__Pages__ are files that live in the `content` directory of your Hyas project. They are responsible for handling routing, data loading, and overall page layout for every page in your website.
 
 ## Create new content
 
