--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -66,7 +66,7 @@ See the [Configuration](/basics/configuration/) guide for details on setting con
 
 ### `content/`
 
-The `content/` directory is where you store content, organized in sections or page bundles (leaf bundles or branch bundles) and can contain page resources.
+The `content/` directory is where you store [pages](/basics/pages/), organized in sections or page bundles (leaf bundles or branch bundles) and can contain page resources.
 
 ### `layouts/`
 
