Update Commands guide

--- a/src/content/docs/basics/commands.mdx
+++ b/src/content/docs/basics/commands.mdx
@@ -91,7 +91,7 @@ yarn run create
   </TabItem>
 </Tabs>
 
-For example, create an "About" page in the `content` directory of your project:
+For example, create an about page in the `content` directory of your project:
 
 <Tabs syncKey="package-manager">
   <TabItem label="npm">
