Update Commands guide

--- a/src/content/docs/basics/commands.mdx
+++ b/src/content/docs/basics/commands.mdx
@@ -63,7 +63,7 @@ The extra `--` before any flag is necessary for `npm` to pass your flags to the 
 :::
 
 :::note
-You can find the available flags for each command on the below command's linked page.
+You can find the available flags for a command on the command's linked script page below.
 :::
 
 ### `create`
