Update Configuration guide

--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -60,9 +60,7 @@ The `hugo.toml` file includes [Hugo configuration](https://gohugo.io/getting-sta
 
 The `module.toml` file specifies the [Hugo mounts](https://gohugo.io/hugo-modules/configuration/#module-configuration-mounts), logically linking `node_modules` directories to component folders (ex: `assets`, `layouts`) — making Hyas Integrations available in your Hyas project.
 
-The `params.toml` file is where you set Hyas configuration options like e.g. options for themes and integrations. 
-
-See the [Configuration](/basics/configuration/) guide for details on setting configurations.
+The `params.toml` file is where you set [Hyas configuration](/reference/configuration/) options like e.g. options for themes and integrations. 
 
 ### `content/`
 
